--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "express-http-proxy": "^1.2.0",
+    "mongodb": "^3.1.0-beta4",
     "react": "^16.3.2"
   }
 }
